add task processing service: - boilerplate communication between services using rabbitmq - broker logic is raw and not concurrent yet - abstract task -> code processing task
