# internal/api/http/types/task.go
@@ -1,9 +1,12 @@
 package types
 
+import "task-server/internal/domain"
+
 // CreateTaskRequest - структура для входных данных на создание задачи
-// type CreateTaskRequest struct {
-// 	Data string `json:"data"`
-// }
+type CreateTaskRequest struct {
+	Translator string `json:"translator"`
+	Code       string `json:"code"`
+}
 
 // CreateTaskResponse - структура для выходных данных на создание задачи
 type CreateTaskResponse struct {
@@ -17,6 +20,19 @@ type GetTaskStatusResponse struct {
 
 // GetTaskResultResponse - структура для выходных данных на запрос результата задачи
 type GetTaskResultResponse struct {
-	Result []byte `json:"result"`
+	Result TaskResult `json:"result"`
 }
 
+type TaskResult struct {
+	Stdout string `json:"stdout"`
+	Stderr string `json:"stderr"`
+}
+
+func CreateGetTaskResultResponse(task domain.Task) GetTaskResultResponse {
+	return GetTaskResultResponse{
+		TaskResult{
+			task.Stdout,
+			task.Stderr,
+		},
+	}
+}
